optimized icons folder

--- a/section-potet.html
+++ b/section-potet.html
@@ -125,7 +125,7 @@ fluo.com.mx
     <!-- SAL DE MAR -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'potet')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletP1.svg">
+        <img class="bulletBack" src="img/icons/bulletP1.svg">
         <img id="mock" src="img/potet/saldemar.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -137,7 +137,7 @@ fluo.com.mx
     <!-- HABANERO -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'potet')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletP2.svg">
+        <img class="bulletBack" src="img/icons/bulletP2.svg">
         <img id="mock" src="img/potet/habanero.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -149,7 +149,7 @@ fluo.com.mx
     <!-- CHILE DE ARBOL -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'potet')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletP3.svg">
+        <img class="bulletBack" src="img/icons/bulletP3.svg">
         <img id="mock" src="img/potet/chilearbol.png" alt="">
       </div>
       <div class="info elemLeft">
