--- a/section-sot.html
+++ b/section-sot.html
@@ -125,7 +125,7 @@ fluo.com.mx
     <!-- CAMOTE -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'sot')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletS2.svg">
+        <img class="bulletBack" src="img/icons/bulletS2.svg">
         <img class="mock" src="img/sot/camote.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -137,7 +137,7 @@ fluo.com.mx
     <!-- PLATANITO -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'sot')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletS3.svg">
+        <img class="bulletBack" src="img/icons/bulletS3.svg">
         <img class="mock" src="img/sot/platanito.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -149,7 +149,7 @@ fluo.com.mx
     <!-- MIX -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'sot')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletS1.svg">
+        <img class="bulletBack" src="img/icons/bulletS1.svg">
         <img class="mock" src="img/sot/mix.png" alt="">
       </div>
       <div class="info elemLeft">
