--- a/section-tlayolis.html
+++ b/section-tlayolis.html
@@ -125,7 +125,7 @@ fluo.com.mx
     <!-- JALAPEÑO -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletT1.svg">
+        <img class="bulletBack" src="img/icons/bulletT1.svg">
         <img id="mock" src="img/tlayolis/jalapeno.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -137,7 +137,7 @@ fluo.com.mx
     <!-- HABANERO -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletT2.svg">
+        <img class="bulletBack" src="img/icons/bulletT2.svg">
         <img id="mock" src="img/tlayolis/habanero.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -149,7 +149,7 @@ fluo.com.mx
     <!-- BBQ -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/bulletT3.svg">
+        <img class="bulletBack" src="img/icons/bulletT3.svg">
         <img id="mock" src="img/tlayolis/bbq.png" alt="">
       </div>
       <div class="info elemLeft">
