Add lista de cambios, img opt nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -117,11 +117,11 @@ fluo.com.mx
       <p class="coverHeader hideOpacity">Somos una empresa 100% mexicana dedicada a ofrecer botanas innovadoras de calidad. Nuestro foco son jóvenes que buscan opciones diferentes y accesibles con sabores novedosos.</p>
     </header>
     <ul>
-      <li style="background-image:url('img/nosotros-mision.jpg');">
+      <li style="background-image:url('img/nosotros/nosotros-mision.jpg');">
         <h2>Misión</h2>
         <p>Ofrecer botanas innovadoras y diversas, al alcance de los mexicanos y sus estilos de vida.</p>
       </li>
-      <li style="background-image:url('img/nosotros-vision.jpg');">
+      <li style="background-image:url('img/nosotros/nosotros-vision.jpg');">
         <h2>Visión</h2>
         <p>Ser la mejor empresa mexicana de botanas que se dedique a innovar a través del estilo de vida de sus consumidores.</p>
       </li>
