--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-Yot Mx
+Yot Mx - Index
 v2.8
 3 de Junio 2018
 [FLUO]
@@ -43,11 +43,11 @@ fluo.com.mx
 </head>
 <body>
   <p id="s"></p>
-  <div id="loading" style="display:none">
+  <div id="loading" class="transitionBlock">
     <div id="salsaWrap">
       <div id="salsaLiquid"></div>
     </div>
-    <p id="percentage">1%</p>
+    <p id="percentage">Cargando...</p>
   </div>
   <div id="telPopW">
     <div>
@@ -188,11 +188,13 @@ fluo.com.mx
   <audio id="tlayolisSound">
     <source src="audios/Tapa9.wav">
   </audio>
+  <script src="js/loads.js" charset="utf-8"></script>
   <script src="js/bowser.min.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <script type="text/javascript">
     window.onload = function(){
-      countLoading();
+      xhReq(backgroundsHome);
+      xhReq(backgroundsProductos);
       setPhone();
       // evtArrowIndex();
       // detectswipe('mainIndex', swipeTransformIndex);
