--- a/section-tlayolis.html
+++ b/section-tlayolis.html
@@ -1,5 +1,5 @@
 <!--
-Yot Mx
+Yot Mx - Tlayolis
 v2.8
 3 de Junio 2018
 [FLUO]
@@ -44,11 +44,11 @@ fluo.com.mx
 </head>
 <body>
   <p id="s"></p>
-  <div id="loading" style="display:none">
+  <div id="loading">
     <div id="salsaWrap">
       <div id="salsaLiquid"></div>
     </div>
-    <p id="percentage">1%</p>
+    <p id="percentage">Cargando...</p>
   </div>
   <div id="telPopW">
     <div>
@@ -310,12 +310,13 @@ fluo.com.mx
     <source src="audios/Tapa9.wav">
   </audio>
   <script src="js/bowser.min.js" charset="utf-8"></script>
+  <script src="js/loads.js" charset="utf-8"></script>
   <script src="js/anime.min.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <script src="js/slider.js" charset="utf-8"></script>
   <script type="text/javascript">
     window.onload = function(){
-      countLoading();
+      xhReq(tlayolisProducto);
       setTimeout(function(){
         fadeInHeader();
       },1000);
