cambios martes 19 de junio

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ fluo.com.mx
   <script src="js/main.js" charset="utf-8"></script>
   <script type="text/javascript">
     window.onload = function(){
+      blockScroll();
       xhReq(backgroundsHome);
       setTimeout(function(){
         xhReq(backgroundsProductos);
