--- a/nosotros.html
+++ b/nosotros.html
@@ -241,7 +241,7 @@ fluo.com.mx
               <div class="productosBullets">
                 <img src="img/icons/bulletS1.svg">
               </div>
-              <h2>Mix</h2>
+              <h2>Mix Camote y Yuca</h2>
               <!-- <p>Ideal para disfrutar una comida <br> con amigos y personas cercanas.</p> -->
               <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25" style="opacity:0">
             </div>
@@ -255,7 +255,7 @@ fluo.com.mx
               <div class="productosBullets">
                 <img src="img/icons/bulletS3.svg">
               </div>
-              <h2>Platanito</h2>
+              <h2>Platanitos</h2>
               <!-- <p>El mood ideal para salir de fiesta y <br> conocer nuevos lugares, personas <br> y experiencias.</p> -->
               <img class="iconMore unrotateIcon" src="img/icons/moreHover.svg" width="25" style="opacity:0">
             </div>
