--- a/section-sot.html
+++ b/section-sot.html
@@ -122,10 +122,10 @@ fluo.com.mx
       <header id="coverHeader" class="hideOpacity sot">
         <div id="redesIndividuales" class="showDisplayFlex">
           <a href="www.facebook.com/SOT-341742719565431/" title="Facebook Sot" target="_blank">
-            <img onmouseover="changeIcon('over', 'menu/fb-', this)" onmouseout="changeIcon('out', 'menu/fb-', this)" src="img/menu/fb-out.svg" height="30">
+            <img onmouseover="changeIcon('over', 'menu/fb-', this)" onmouseout="changeIcon('out', 'menu/fb-', this)" src="img/menu/fb-out.svg" height="50">
           </a>
           <a href="www.instagram.com/eligesot" title="Instagram Sot" target="_blank">
-            <img onmouseover="changeIcon('over', 'menu/ig-', this)" onmouseout="changeIcon('out', 'menu/ig-', this)" src="img/menu/ig-out.svg" height="30">
+            <img onmouseover="changeIcon('over', 'menu/ig-', this)" onmouseout="changeIcon('out', 'menu/ig-', this)" src="img/menu/ig-out.svg" height="50">
           </a>
         </div>
       </header>
@@ -149,7 +149,7 @@ fluo.com.mx
         <img class="mock" src="img/sot/platanito.png" alt="">
       </div>
       <div class="info elemLeft">
-        <h2>Platanito</h2>
+        <h2>Platanitos</h2>
         <p>Crujientes cortes de plátano, tropicalmente deliciosos.</p>
         <div style="background-image:url('img/tablas/sot-platanitos.svg');"></div>
       </div>
@@ -161,7 +161,7 @@ fluo.com.mx
         <img class="mock" src="img/sot/mix.png" alt="">
       </div>
       <div class="info elemLeft">
-        <h2>Camote y Yuca</h2>
+        <h2>Mix Camote y Yuca</h2>
         <p>Finos cortes de yuca oaxaqueña y camote michoacano salteados con sal de mar guerrerense.</p>
         <div style="background-image:url('img/tablas/sot-mix.svg');"></div>
       </div>
@@ -182,8 +182,8 @@ fluo.com.mx
     <ul>
       <li><a onmouseover="bulletHover('.b1El', 'over')" onmouseout="bulletHover('.b1El', 'out')" class="b1El transition" role="button" onclick="bulletsProducto(0)"><p class="textBullet">Sot</p></a></li>
       <li><a onmouseover="bulletHover('.b2El', 'over')" onmouseout="bulletHover('.b2El', 'out')" class="b2El transition" role="button" onclick="bulletsProducto(1)"><p class="textBullet">Camote</p></a></li>
-      <li><a onmouseover="bulletHover('.b3El', 'over')" onmouseout="bulletHover('.b3El', 'out')" class="b3El transition" role="button" onclick="bulletsProducto(2)"><p class="textBullet">Platanito</p></a></li>
-      <li><a onmouseover="bulletHover('.b4El', 'over')" onmouseout="bulletHover('.b4El', 'out')" class="b4El transition" role="button" onclick="bulletsProducto(3)"><p class="textBullet">Mix</p></a></li>
+      <li><a onmouseover="bulletHover('.b3El', 'over')" onmouseout="bulletHover('.b3El', 'out')" class="b3El transition" role="button" onclick="bulletsProducto(2)"><p class="textBullet">Platanitos</p></a></li>
+      <li><a onmouseover="bulletHover('.b4El', 'over')" onmouseout="bulletHover('.b4El', 'out')" class="b4El transition" role="button" onclick="bulletsProducto(3)"><p class="textBullet">Mix Camote y Yuca</p></a></li>
       <li><a onmouseover="bulletHover('.b5El', 'over')" onmouseout="bulletHover('.b5El', 'out')" class="b5El transition" role="button" onclick="bulletsProducto(4)"><p class="textBullet">Prepáralas</p></a></li>
     </ul>
     <ul>
@@ -249,7 +249,7 @@ fluo.com.mx
         <img src="img/icons/close.svg" width="40">
       </a>
     </div>
-    <img id="popSliderImg" src="img/sot/s-1-full.png">
+    <img id="popSliderImg" src="img/sot/s-1-full.jpg">
     <div id="arrowPopDesk">
       <a role="button" onclick="arrowPopDesk('prev')">
         <img onmouseover="changeIcon('over', 'icons/arrow-', this);" onmouseout="changeIcon('out', 'icons/arrow-', this);" src="img/icons/arrow-out.svg" width="35">
@@ -266,7 +266,7 @@ fluo.com.mx
       <span class="rotB rotcw"></span>
       <img src="img/icons/circle.svg" width="50">
     </a>
-    <img src="img/sot/s-1-full.png">
+    <img src="img/sot/s-1-full.jpg">
     <div id="swipeSliderMob"></div>
     <div id="arrowPopMobile">
       <a role="button" onclick="arrowPopSlider('prev')">
