--- a/section-tlayolis.html
+++ b/section-tlayolis.html
@@ -122,10 +122,10 @@ fluo.com.mx
       <header id="coverHeader" class="hideOpacity tlayolis">
         <div id="redesIndividuales" class="showDisplayFlex">
           <a href="www.facebook.com/tlayolis" title="Facebook Tlayolis" target="_blank">
-            <img onmouseover="changeIcon('over', 'menu/fb-', this)" onmouseout="changeIcon('out', 'menu/fb-', this)" src="img/menu/fb-out.svg" height="30">
+            <img onmouseover="changeIcon('over', 'menu/fb-', this)" onmouseout="changeIcon('out', 'menu/fb-', this)" src="img/menu/fb-out.svg" height="50">
           </a>
           <a href="www.instagram.com/tlayolis" title="Instagram Tlayolis" target="_blank">
-            <img onmouseover="changeIcon('over', 'menu/ig-', this)" onmouseout="changeIcon('out', 'menu/ig-', this)" src="img/menu/ig-out.svg" height="30">
+            <img onmouseover="changeIcon('over', 'menu/ig-', this)" onmouseout="changeIcon('out', 'menu/ig-', this)" src="img/menu/ig-out.svg" height="50">
           </a>
         </div>
       </header>
@@ -253,7 +253,7 @@ fluo.com.mx
         <img src="img/icons/close.svg" width="40">
       </a>
     </div>
-    <img id="popSliderImg" src="img/tlayolis/s-1-full.png">
+    <img id="popSliderImg" src="img/tlayolis/s-1-full.jpg">
     <div id="arrowPopDesk">
       <a role="button" onclick="arrowPopDesk('prev')">
         <img onmouseover="changeIcon('over', 'icons/arrow-', this);" onmouseout="changeIcon('out', 'icons/arrow-', this);" src="img/icons/arrow-out.svg" width="35">
@@ -270,7 +270,7 @@ fluo.com.mx
       <span class="rotB rotcw"></span>
       <img src="img/icons/circle.svg" width="50">
     </a>
-    <img src="img/tlayolis/s-1-full.png">
+    <img src="img/tlayolis/s-1-full.jpg">
     <div id="swipeSliderMob"></div>
     <div id="arrowPopMobile">
       <a role="button" onclick="arrowPopSlider('prev')">
