--- a/section-sot.html
+++ b/section-sot.html
@@ -68,7 +68,7 @@ fluo.com.mx
   <div id="sliderBack" class="sotBackSlider"></div>
   <!-- MENU -->
   <nav class="main">
-    <a href="index.html" onmouseover="hoverSound('#logoSound')">
+    <a href="index.html" onmouseover="hoverSound('#logoSound')" onclick="hoverSound('#logoSound')">
       <img onmouseover="changeIcon('over', 'menu/logotipo-', this)" onmouseout="changeIcon('out', 'menu/logotipo-', this)" src="img/menu/logotipo-out.svg" height="53" title="Ir a Inicio">
     </a>
     <ul class="outerMobile">
@@ -94,6 +94,11 @@ fluo.com.mx
           <!-- <a href="#"> <img onmouseover="changeIcon('over', 'menu/fb-', this)" onmouseout="changeIcon('out', 'menu/fb-', this)" src="img/menu/fb-out.svg" title="Ir a Facebook" alt="Facebook" height="45"> </a>
           <a href="#"> <img onmouseover="changeIcon('over', 'menu/ig-', this)" onmouseout="changeIcon('out', 'menu/ig-', this)" src="img/menu/ig-out.svg" title="Ir a Instagram" alt="Instagram" height="45"> </a> -->
         </li>
+        <div>
+          <p>Derechos reservados Grupo Yot Mx© 2018</p>
+          <p>info@yot.com.mx</p>
+          <p>Coded by <a href="fluo.com.mx">Fluo MX</a></p>
+        </div>
       </span>
     </ul>
     <ul class="outerDesktop desktop">
@@ -325,8 +330,12 @@ fluo.com.mx
         fadeInHeader();
       },1000);
       blockScroll();
+      blockScrollTwo();
       setPhone();
       // preventSwipe();
+      setTimeout(function(){
+        loadSlider('sot');
+      },1500);
     }
     window.onorientationchange = function(){
       if(window.orientation == 90 || window.orientation == -90){
