--- a/section-tlayolis.html
+++ b/section-tlayolis.html
@@ -68,7 +68,7 @@ fluo.com.mx
   <div id="sliderBack" class="tlayolisBackSlider"></div>
   <!-- MENU -->
   <nav class="main">
-    <a href="index.html" onmouseover="hoverSound('#logoSound')">
+    <a href="index.html" onmouseover="hoverSound('#logoSound')" onclick="hoverSound('#logoSound')">
       <img onmouseover="changeIcon('over', 'menu/logotipo-', this)" onmouseout="changeIcon('out', 'menu/logotipo-', this)" src="img/menu/logotipo-out.svg" height="53" title="Ir a Inicio">
     </a>
     <ul class="outerMobile">
@@ -94,6 +94,11 @@ fluo.com.mx
           <!-- <a href="#"> <img onmouseover="changeIcon('over', 'menu/fb-', this)" onmouseout="changeIcon('out', 'menu/fb-', this)" src="img/menu/fb-out.svg" title="Ir a Facebook" alt="Facebook" height="45"> </a>
           <a href="#"> <img onmouseover="changeIcon('over', 'menu/ig-', this)" onmouseout="changeIcon('out', 'menu/ig-', this)" src="img/menu/ig-out.svg" title="Ir a Instagram" alt="Instagram" height="45"> </a> -->
         </li>
+        <div>
+          <p>Derechos reservados Grupo Yot Mx© 2018</p>
+          <p>info@yot.com.mx</p>
+          <p>Coded by <a href="fluo.com.mx">Fluo MX</a></p>
+        </div>
       </span>
     </ul>
     <ul class="outerDesktop desktop">
@@ -133,8 +138,8 @@ fluo.com.mx
     <!-- JALAPEÑO -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/icons/bulletT1.svg">
-        <img id="mock" src="img/tlayolis/jalapeno.png" alt="">
+        <img class="bulletBack animateBlob" src="img/icons/bulletT1.svg">
+        <img class="mock animateProd" id="mock" src="img/tlayolis/jalapeno.png" alt="">
       </div>
       <div class="info elemLeft">
         <h2>Jalapeño</h2>
@@ -145,8 +150,8 @@ fluo.com.mx
     <!-- HABANERO -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/icons/bulletT2.svg">
-        <img id="mock" src="img/tlayolis/habanero.png" alt="">
+        <img class="bulletBack animateBlob" src="img/icons/bulletT2.svg">
+        <img class="mock animateProd" id="mock" src="img/tlayolis/habanero.png" alt="">
       </div>
       <div class="info elemLeft">
         <h2>Habanero</h2>
@@ -157,8 +162,8 @@ fluo.com.mx
     <!-- BBQ -->
     <article class="hideDisplay productoArticle">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')" onclick="prodPop('open', this)">
-        <img class="bulletBack" src="img/icons/bulletT3.svg">
-        <img id="mock" src="img/tlayolis/bbq.png" alt="">
+        <img class="bulletBack animateBlob" src="img/icons/bulletT3.svg">
+        <img class="mock animateProd" id="mock" src="img/tlayolis/bbq.png" alt="">
       </div>
       <div class="info elemLeft">
         <h2>Barbecue</h2>
@@ -329,8 +334,12 @@ fluo.com.mx
         fadeInHeader();
       },1000);
       blockScroll();
+      blockScrollTwo();
       setPhone();
       // preventSwipe();
+      setTimeout(function(){
+        loadSlider('sot');
+      },1500);
     }
     window.onorientationchange = function(){
       if(window.orientation == 90 || window.orientation == -90){
